--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html id="html">
 <head>
 	<title>Friend</title>
 	<link rel="stylesheet" type="text/css" href="./css/index.css">
 	<script src="./plugins/jquery-3.3.1.min.js"></script>
+	<script src="./js/config.js"></script>
 	<script>window.$ = window.jQuery = require('./plugins/jquery-3.3.1.min.js');</script>
 </head>
 <body>
@@ -13,16 +14,30 @@
 
 	<!-- 区域穿透 -start- -->
 	<script>
-		if(process.env.NODE_ENV != 'devTools') {
-			let win = require('electron').remote.getCurrentWindow();
-			let el = document.getElementById('clickThroughElement')
-			el.addEventListener('mouseenter', () => {
+		let win = require('electron').remote.getCurrentWindow();
+		let el = document.getElementById('html');
+
+		el.style.width = 200;
+		el.style.height = 250;
+		
+		el.addEventListener('mouseenter', (e) => {
+		  win.setIgnoreMouseEvents(true, { forward: true })
+		})
+		el.addEventListener('mouseleave', () => {
+		  win.setIgnoreMouseEvents(false)
+		})
+
+		setTimeout(() => {
+			let el1 = document.getElementsByClassName('dg ac')[0];
+			console.log(el1)
+			el1.addEventListener('mouseenter', (e) => {
+				console.log('ddd')
 			  win.setIgnoreMouseEvents(false)
 			})
-			el.addEventListener('mouseleave', () => {
+			el1.addEventListener('mouseleave', () => {
 			  win.setIgnoreMouseEvents(true, { forward: true })
 			})
-		}
+		}, 2000);
 	</script>
 	<script type="module" src="./js/scene.js"></script>
 	<!-- 区域穿透 -end- -->
