--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -40,8 +40,8 @@
 		// 	})
 		// }, 2000);
 	</script>
-	<!-- <script type="module" src="./js/scene.js"></script> -->
-	<script type="module" src="./js/scene1.js"></script>
+	<script type="module" src="./js/scene.js"></script>
+	<!-- <script type="module" src="./js/scene1.js"></script> -->
 	<!-- <script type="module" src="./js/scene2.js"></script> -->
 	<!-- 区域穿透 -end- -->
 </body>
