--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -22,22 +22,22 @@
 		el.style.width = 200;
 		el.style.height = 250;
 		
-		// el.addEventListener('mouseenter', (e) => {
-		//   win.setIgnoreMouseEvents(true, { forward: true })
-		// })
-		// el.addEventListener('mouseleave', () => {
-		//   win.setIgnoreMouseEvents(false)
-		// })
+		el.addEventListener('mouseenter', (e) => {
+		  win.setIgnoreMouseEvents(true, { forward: true })
+		})
+		el.addEventListener('mouseleave', () => {
+		  win.setIgnoreMouseEvents(false)
+		})
 
-		// setTimeout(() => {
-		// 	let el1 = document.getElementsByClassName('dg ac')[0];
-		// 	el1.addEventListener('mouseenter', (e) => {
-		// 	  win.setIgnoreMouseEvents(false)
-		// 	})
-		// 	el1.addEventListener('mouseleave', () => {
-		// 	  win.setIgnoreMouseEvents(true, { forward: true })
-		// 	})
-		// }, 2000);
+		setTimeout(() => {
+			let el1 = document.getElementsByClassName('dg ac')[0];
+			el1.addEventListener('mouseenter', (e) => {
+			  win.setIgnoreMouseEvents(false)
+			})
+			el1.addEventListener('mouseleave', () => {
+			  win.setIgnoreMouseEvents(true, { forward: true })
+			})
+		}, 2000);
 	</script>
 	<script type="module" src="./js/scene.js"></script>
 	<!-- <script type="module" src="./js/scene1.js"></script> -->
