添加获取系统信息

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -43,6 +43,7 @@
 	<!-- <script type="module" src="./js/scene1.js"></script> -->
 	<!-- <script type="module" src="./js/scene2.js"></script> -->
 	<script type="module" src="./js/frequency.js"></script>
+	<script type="module" src="./js/os.js"></script>
 	<!-- 区域穿透 -end- -->
 </body>
 </html>
