添加控制模式切换

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -10,7 +10,7 @@
 	<!-- 不可穿透容器 -start- -->
 	<div id="clickThroughElement"></div>
 	<canvas id="mainCanvas" width="800px" height="600px" ></canvas>
-	<div id="console"></div>
+	<div id="console" style="display: none;"></div>
 
 	<!-- 不可穿透容器 -end- -->
 
