--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -10,9 +10,9 @@
 	<div id="clickThroughElement"></div>
 	<canvas id="mainCanvas" width="800px" height="600px" ></canvas>
 	<div id="console" style="display: none;"></div>
-	<!-- <div id="operateMiss">
+	<div id="operateMiss" style="display: none;">
 		<div class="operate" name=""></div>
-	</div> -->
+	</div>
 
 	<script type="module" src="./js/scene.js"></script>
 	<!-- <script type="module" src="./js/scene1.js"></script> -->
