--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -10,14 +10,13 @@
 	<div id="clickThroughElement"></div>
 	<canvas id="mainCanvas" width="800px" height="600px" ></canvas>
 	<div id="console" style="display: none;"></div>
-	<div id="operateMiss" style="display: none;">
-		<div class="operate" name=""></div>
-	</div>
+	<div id="operateMiss" style="display: none;"></div>
+	<div id="emotion" style="display: none;"></div>
 
 	<script type="module" src="./js/scene.js"></script>
 	<!-- <script type="module" src="./js/scene1.js"></script> -->
 	<!-- <script type="module" src="./js/scene2.js"></script> -->
-	<script type="module" src="./js/frequency.js"></script>
+	<script type="module" src="./js/index.js"></script>
 	<script type="module" src="./js/os.js"></script>
 	<!-- 区域穿透 -end- -->
 </body>
