完善文档、思路

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -3,8 +3,8 @@
 <head>
 	<title>Friend</title>
 	<link rel="stylesheet" type="text/css" href="./css/index.css">
-	<script src="./plugins/jquery-3.3.1.min.js"></script>
-	<script>window.$ = window.jQuery = require('./plugins/jquery-3.3.1.min.js');</script>
+	<script src="./build/jquery-3.3.1.min.js"></script>
+	<script>window.$ = window.jQuery = require('./build/jquery-3.3.1.min.js');</script>
 </head>
 <body>
 	<div id="clickThroughElement"></div>
