--- a/src/renderer/util/html/webview.html
+++ b/src/renderer/util/html/webview.html
@@ -11,6 +11,6 @@ $('#locaUrl').off().on('keydown', e => {
 	}
 });
 $('#webview')[0].addEventListener('did-stop-loading',function(){
-    $('#webview')[0].openDevTools();
+    // $('#webview')[0].openDevTools();
 })
 </script>
