--- a/src/renderer/util/html/webview.html
+++ b/src/renderer/util/html/webview.html
@@ -1,16 +1,64 @@
-<input type="text" id="locaUrl" />
-<webview id="webview" src="http://91porn.com/v.php?next=watch" style="width: 100%;height: 100%;" allowpopups disablewebsecurity plugins preload="webview.js"/>
-<!-- <webview id="webview" src="http://www.baidu.com" style="width: 100%;height: 100%;" allowpopups disablewebsecurity plugins preload="webview.js"/> -->
+<div style="color: #fff;">
+	<input type="text" id="locaUrl"/>
+	<span id="skip">跳转</span>
+	<span id="rollback">回退</span>
+	<span id="refresh">刷新</span>
+	<span id="imgHideShow">图片切换</span>
+	<span id="discern">识别m3u8</span>
+	<span id="openTool">打开调试</span>
+</div>
+<!-- <webview id="webview" src="http://91porn.com/v.php?next=watch"
+	style="width: 100%;height: 100%;"
+	allowpopups disablewebsecurity plugins
+	nodeintegration preload="webview.js"/> -->
+<webview id="webview" src="http://www.baidu.com" style="width: 100%;height: 100%;" allowpopups disablewebsecurity plugins preload="webview.js"/>
 
 <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
 <script src="../../build/jquery-3.3.1.min.js"></script>
 <script type="text/javascript">
-$('#locaUrl').off().on('keydown', e => {
-	if(e.keyCode == 13) {
-		$('#webview').attr('src', $('#locaUrl').val());
+var busClient = new WebSocket('ws://localhost:12122/');
+
+var eventBind = function() {
+	let aCss = {
+		'padding-right': '10px', 'cursor': 'pointer'
 	}
-});
-$('#webview')[0].addEventListener('did-stop-loading',function(){
-    // $('#webview')[0].openDevTools();
+
+	$('#locaUrl').css({ 'margin-right': '10px' }).off().on('keydown', e => {
+		if(e.keyCode == 13) {
+			$('#webview').attr('src', $('#locaUrl').val().trim());
+		}
+	});
+	
+	$('#skip').css(aCss).off().on('click', e => {
+		$('#webview').attr('src', $('#locaUrl').val().trim());
+	});
+	$('#rollback').css(aCss).off().on('click', e => {
+		$('#webview')[0].goBack();
+	});
+	$('#refresh').css(aCss).off().on('click', e => {
+		$('#webview')[0].reload();
+	});
+	$('#imgHideShow').css(aCss).off().on('click', e => {
+		busClient.send(JSON.stringify({ id: 'webview-imgHideShow' }));
+	});
+	$('#discern').css(aCss).off().on('click', e => {
+		busClient.send(JSON.stringify({ id: 'webview-discern' }));
+	})
+	$('#openTool').css(aCss).off().on('click', e => {
+		$('#webview')[0].openDevTools();
+	});
+
+
+	busClient.send(JSON.stringify({ id: 'webview-imgHideShow' }));
+	// $('#webview').insertCSS({})
+};
+
+$('#webview').on('did-finish-load', e => {
+	$('#webview')[0].openDevTools();
+	const script=document.createElement("script");
+	script.type="text/javascript"; 
+	script.src="https://code.jquery.com/jquery-1.12.4.min.js";
+	$('#webview').find('head').append(script);
+	eventBind();
 })
 </script>
