--- a/src/renderer/util/html/webview.html
+++ b/src/renderer/util/html/webview.html
@@ -11,7 +11,7 @@
 	style="width: 100%;height: 100%;"
 	allowpopups disablewebsecurity plugins
 	nodeintegration preload="webview.js"/> -->
-<webview id="webview" src="http://www.baidu.com" style="width: 100%;height: 100%;" allowpopups disablewebsecurity plugins preload="webview.js"/>
+<webview id="webview" src="https://v.youku.com/v_show/id_XNTE1NzU4NzEyMA==" style="width: 100%;height: 100%;" allowpopups disablewebsecurity plugins preload="webview.js"/>
 
 <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
 <script src="../../build/jquery-3.3.1.min.js"></script>
