--- a/src/renderer/util/html/webview.html
+++ b/src/renderer/util/html/webview.html
@@ -7,12 +7,13 @@
 	<span id="discern">识别m3u8</span>
 	<span id="openTool">打开调试</span>
 </div>
-<!-- <webview id="webview" src="http://91porn.com/v.php?next=watch"
+<webview id="webview" src="http://91porn.com/v.php?next=watch&min_duration=5"
 	style="width: 100%;height: 100%;"
 	allowpopups disablewebsecurity plugins
-	nodeintegration preload="webview.js"/> -->
-<webview id="webview" src="https://v.youku.com/v_show/id_XNTE1NzU4NzEyMA==" style="width: 100%;height: 100%;" allowpopups disablewebsecurity plugins preload="webview.js"/>
+	nodeintegration preload="webview.js"/>
+<!-- <webview id="webview" src="https://v.youku.com/v_show/id_XNTE1NzU4NzEyMA==" style="width: 100%;height: 100%;" allowpopups disablewebsecurity plugins preload="webview.js"/> -->
 <!-- <webview id="webview" src="https://www.mgtv.com/b/371647/12112423.html?fpa=9349&fpos=1&lastp=ch_home" style="width: 100%;height: 100%;" allowpopups disablewebsecurity plugins preload="webview.js"/> -->
+<!-- <webview id="webview" src="https://www.baidu.com" style="width: 100%;height: 100%;" allowpopups disablewebsecurity plugins preload="webview.js"/> -->
 
 <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
 <script src="../../build/jquery-3.3.1.min.js"></script>
