--- a/src/renderer/html/webview.html
+++ b/src/renderer/html/webview.html
@@ -21,7 +21,7 @@
 <!-- <webview id="webview" src="https://www.baidu.com" style="width: 100%;height: 100%;" allowpopups disablewebsecurity plugins preload="webview.js"/> -->
 
 <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
-<script src="../../build/jquery-3.3.1.min.js"></script>
+<script src="../build/jquery-3.3.1.min.js"></script>
 <script type="text/javascript">
 var busClient = new WebSocket('ws://localhost:12122/');
 
@@ -63,7 +63,7 @@ var eventBind = function() {
 $('#webview').on('did-start-loading', e => {
 	$('#webview')[0].openDevTools();
 	const script=document.createElement("script");
-	script.type="text/javascript"; 
+	script.type="text/javascript";
 	script.src="https://code.jquery.com/jquery-1.12.4.min.js";
 	$('#webview').find('head').append(script);
 	eventBind();
