--- a/src/renderer/browser/index.html
+++ b/src/renderer/browser/index.html
@@ -32,6 +32,15 @@
 		<span class="opt icons" data-id="close">&#xe781;</span>
 	</div>
 </div>
+<div style="color: #fff;">
+	<input type="text" id="locaUrl"/>
+	<span id="skip">跳转</span>
+	<span id="rollback">回退</span>
+	<span id="refresh">刷新</span>
+	<span id="imgHideShow">图片切换</span>
+	<span id="discern">识别m3u8</span>
+	<span id="openTool">打开调试</span>
+</div>
 <div class="etabs-views"></div>
 
 <script src="./config.js" charset="UTF-8" type="text/javascript"></script>
