新版的浏览器

--- a/src/renderer/browser/index.html
+++ b/src/renderer/browser/index.html
@@ -45,6 +45,6 @@
 
 <script src="./config.js" charset="UTF-8" type="text/javascript"></script>
 <script src="./util.js" charset="UTF-8" type="text/javascript"></script>
-<script src="./index.js" charset="UTF-8" type="text/javascript"></script>
+<script src="./index.js" charset="UTF-8" type="module"></script>
 </body>
 </html>
